--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<!-- app-messages -->
+<app-messages></app-messages>
+<!-- /app-messages -->
+
 <!-- cabeçalho -->
 <app-header></app-header>
 <!-- /cabeçalho -->
