--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,10 @@ form {
   flex-direction: column;
   margin-bottom: 1em;
 }
+
+.validation-error p {
+  color: #dc3545;
+  margin-top: 0.4em;
+  border-left: 3px solid #dc3545;
+  padding-left: 0.2em;
+}
